<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.unam.formapp.DataDetail">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/data_confirmation_title"
        android:textAlignment="center"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/tieNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="28dp"
        android:text="@string/name"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tieNombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo"
        android:layout_alignStart="@+id/tieEmail"
        android:layout_alignLeft="@+id/tieEmail"
        android:layout_marginTop="28dp"
        android:text="@string/name"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tieNombre"
        android:layout_alignStart="@+id/tieNombre"
        android:layout_alignLeft="@+id/tieNombre"
        android:layout_marginTop="30dp"
        android:text="@string/date_selected"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tieFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/date_selected"
        android:layout_alignLeft="@+id/tieEmail"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="36dp"
        android:text="@string/phone"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tieTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_above="@+id/textView9"
        android:layout_alignLeft="@+id/tieEmail"
        android:layout_alignStart="@+id/tieEmail" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="33dp"
        android:text="@string/email"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tieEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_above="@+id/textView20"
        android:layout_alignLeft="@+id/tieDescripcion"
        android:layout_alignStart="@+id/tieDescripcion" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="33dp"
        android:text="@string/contact_description"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tieDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_description"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_alignBaseline="@+id/textView20"
        android:layout_alignBottom="@+id/textView20"
        android:layout_toRightOf="@+id/textView20"
        android:layout_toEndOf="@+id/textView20" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_edit"
        android:theme="@style/MiBotonEditar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
