<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_predeterminado"
        android:layout_marginLeft="@dimen/margen_predeterminado"
        android:layout_marginTop="@dimen/margen_predeterminado"
        android:layout_marginEnd="@dimen/margen_predeterminado"
        android:layout_marginRight="@dimen/margen_predeterminado"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_predeterminado"
        android:layout_marginLeft="@dimen/margen_predeterminado"
        android:layout_marginTop="@dimen/margen_predeterminado"
        android:layout_marginEnd="@dimen/margen_predeterminado"
        android:layout_marginRight="@dimen/margen_predeterminado"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_predeterminado"
        android:layout_marginLeft="@dimen/margen_predeterminado"
        android:layout_marginTop="@dimen/margen_predeterminado"
        android:layout_marginEnd="@dimen/margen_predeterminado"
        android:layout_marginRight="@dimen/margen_predeterminado"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_predeterminado"
        android:layout_marginLeft="@dimen/margen_predeterminado"
        android:layout_marginTop="@dimen/margen_predeterminado"
        android:layout_marginEnd="@dimen/margen_predeterminado"
        android:layout_marginRight="@dimen/margen_predeterminado"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/contact_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:autofillHints=""/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_predeterminado"
        android:layout_marginLeft="@dimen/margen_predeterminado"
        android:layout_marginEnd="@dimen/margen_predeterminado"
        android:layout_marginRight="@dimen/margen_predeterminado"
        android:layout_marginBottom="16dp"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_predeterminado"
        android:layout_marginLeft="@dimen/margen_predeterminado"
        android:layout_marginTop="@dimen/margen_predeterminado"
        android:layout_marginEnd="@dimen/margen_predeterminado"
        android:layout_marginRight="@dimen/margen_predeterminado"
        android:ems="10"
        android:hint="@string/birth_date"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

</androidx.constraintlayout.widget.ConstraintLayout>